--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   ###############################
   cassandra0:
     image: cassandra:3.11.1
-    container_name: cassandra0
+    container_name: cassandra
     ports:
     - 9042:9042
     - 9160:9160
@@ -12,32 +12,11 @@ services:
     - 8778:8778
     environment:
     - CASSANDRA_START_RPC=true
-    - CASSANDRA_SEEDS=cassandra0
+    - CASSANDRA_SEEDS=cassandra
     - CASSANDRA_CLUSTER_NAME=mtech_cluster
     volumes:
     - "./cassandra-init.sh:/cassandra-init.sh"
     command: "sh /cassandra-init.sh"
-    ulimits:
-      memlock: -1
-      nproc: 32768
-      nofile: 100000
-    healthcheck:
-      test: ["CMD-SHELL", "[ $$(nodetool statusgossip) = running ]"]
-
-  ###############################
-  cassandra1:
-    image: cassandra:3.11.1
-    container_name: cassandra1
-    ports:
-    - 9142:9042
-    volumes:
-    - "./cassandra-init.sh:/cassandra-init.sh"
-    command: "sh /cassandra-init.sh"
-    depends_on:
-    - cassandra0
-    environment:
-    - CASSANDRA_SEEDS=cassandra0
-    - CASSANDRA_CLUSTER_NAME=mtech_cluster
     ulimits:
       memlock: -1
       nproc: 32768
