--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,10 @@ dependencies {
 	compile group: 'com.datastax.cassandra', name: 'cassandra-driver-core', version: '3.6.0'
 	compile group: 'io.dropwizard.metrics', name: 'metrics-core', version: '3.1.0'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testCompile group: 'org.cassandraunit', name: 'cassandra-unit', version: '3.0.0.1'
+	compile group: 'org.cassandraunit', name: 'cassandra-unit-shaded', version: '3.0.0.1'
+	compile group: 'org.hectorclient', name: 'hector-core', version: '2.0-0'
+
+
+
 }
