--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   ###############################
   cassandra0:
     image: cassandra:3.11.1
-    container_name: cassandra
+    container_name: cassandra0
     ports:
     - 9042:9042
     - 9160:9160
@@ -12,7 +12,7 @@ services:
     - 8778:8778
     environment:
     - CASSANDRA_START_RPC=true
-    - CASSANDRA_SEEDS=cassandra
+    - CASSANDRA_SEEDS=cassandra0
     - CASSANDRA_CLUSTER_NAME=mtech_cluster
     volumes:
     - "./cassandra-init.sh:/cassandra-init.sh"
@@ -21,8 +21,25 @@ services:
       memlock: -1
       nproc: 32768
       nofile: 100000
-    healthcheck:
-      test: ["CMD-SHELL", "[ $$(nodetool statusgossip) = running ]"]
+
+  ###############################
+  cassandra1:
+    image: cassandra:3.11.1
+    container_name: cassandra1
+    ports:
+    - 9142:9042
+    depends_on:
+    - cassandra0
+    environment:
+    - CASSANDRA_SEEDS=cassandra0
+    - CASSANDRA_CLUSTER_NAME=mtech_cluster
+    volumes:
+    - "./cassandra-init.sh:/cassandra-init.sh"
+    command: "sh /cassandra-init.sh"
+    ulimits:
+      memlock: -1
+      nproc: 32768
+      nofile: 100000
 
   ##############################
   grafana:
@@ -39,3 +56,4 @@ services:
     - /var/run/docker.sock:/var/run/docker.sock
     ports:
     - 9000:9000
+
