--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-cassandra.contactpoints=localhost
-cassandra.port=9142
+cassandra.contactpoints=127.0.0.1
+cassandra.port=9042
 cassandra.keyspace=test_cassandra
 cassandra.basePackages=com.cassandra.example.demo.repository
